# FAST_API-CORS

./: .gitignore  Dockerfile  Orders.db  README.md  database.py  exception_handler.ipynb  front_end.html  logger.py  main.py  practise.ipynb  pyproject.toml  test.ipynb
.github/workflows/: unittest_build.yml
Pydantic_response/: order_response.py
Tabels/: order_tabel.py
orders/: router.py
tests/: test_fastapi.py
