[tool.poetry]
name = "fast-api-cors"
version = "0.1.0"
description = "FastAPI backend with CORS support"
authors = ["AMRENDRA SINGH <amrendra.singh@soojhai.in>"]
license = "Soojh_ai.in"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.124.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.45"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
